src/ui/lidarr_ui/system/snapshots/managarr__ui__lidarr_ui__system__system_details_ui__system_details_ui_tests__tests__snapshot_tests__empty_SystemQueuedEvents.snap
---
source: src/ui/lidarr_ui/system/system_details_ui_tests.rs
expression: output
---
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                 ╭  Queued Events  ────────────────────────────────────────────────────────────────────────────────╮                                 
                                 │                                                                                                 │                                 
                                 │                                                                                                 │                                 
                                 │                                                                                                 │                                 
                                 │                                                                                                 │                                 
                                 │                                                                                                 │                                 
                                 │                                                                                                 │                                 
                                 │                                                                                                 │                                 
                                 │                                                                                                 │                                 
                                 │                                                                                                 │                                 
                                 │                                                                                                 │                                 
                                 │                                                                                                 │                                 
                                 │                                                                                                 │                                 
                                 │                                                                                                 │                                 
                                 │                                                                                                 │                                 
                                 │                                                                                                 │                                 
                                 │                                                                                                 │                                 
                                 │                                                                                                 │                                 
                                 │                                                                                                 │                                 
                                 │                                                                                                 │                                 
                                 │                                                                                                 │                                 
                                 │                                                                                                 │                                 
                                 │                                                                                                 │                                 
                                 │                                                                                                 │                                 
                                 │                                                                                                 │                                 
                                 │                                                                                                 │                                 
                                 │                                                                                                 │                                 
                                 │                                                                                                 │                                 
                                 │                                                                                                 │                                 
                                 ╰─────────────────────────────────────────────────────────────────────────────────────────────────╯
